count of cart items cleared

--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -3,7 +3,7 @@
 
         <!-- CART SECTION -->
         <section>
-            <ng-container *ngIf="len>=1">
+            <ng-container *ngIf="products.length !=0">
                 <div>
                     <div class="p-5 md:p-0 md:py-5">
                         <h1 class="text-2xl">Your Cart</h1>
